--- a/HelloDoc/Views/AdminDash/Access/CreateAccess.cshtml
+++ b/HelloDoc/Views/AdminDash/Access/CreateAccess.cshtml
@@ -14,7 +14,7 @@
                 <a asp-action="AccountAccess" asp-controller="AdminDash" class="btn btn-outline-info mt-3"> ❮  Back </a>
             </div>
         </div>
-        <div class="container bg-white border-0 ">
+        <div class="container white-bag border-0 ">
             <div class="">
                 <span class="fs-2 fw-bold">Details</span>
             </div>
