--- a/HelloDoc/Views/AdminDash/RecordsMenu/ExploreRecords.cshtml
+++ b/HelloDoc/Views/AdminDash/RecordsMenu/ExploreRecords.cshtml
@@ -14,7 +14,7 @@
                 <a asp-action="AdminDash" class="btn btn-outline-info mt-3"> ❮  Back </a>
             </div>
         </div>
-        <div class="bg-white border justify-content-center">
+        <div class="white-bag border justify-content-center">
             <table class="table">
 
                 <thead class="table-secondary text-center">
