--- a/HelloDoc/Views/Request/Patient_Request.cshtml
+++ b/HelloDoc/Views/Request/Patient_Request.cshtml
@@ -219,7 +219,7 @@
 						<div class="input-group row p-2 mx-auto mt-3" style="height:60px">
 							<div class="d-flex">
 								<label for="fileUpload" class="col d-flex">
-									<div class="col bg-white p-1 ps-3 text-muted border"><span id="infoArea">Select File</span></div>
+									<div class="col white-bag p-1 ps-3 text-muted border"><span id="infoArea">Select File</span></div>
 									<div id="btn" class="p-1 btn btn-info">
 
 										<i class="bi bi-cloud-arrow-up text-white"></i>
