--- a/HelloDoc/Views/Shared/_ProviderDashBoard.cshtml
+++ b/HelloDoc/Views/Shared/_ProviderDashBoard.cshtml
@@ -46,7 +46,7 @@
                         <span class="fw-bold me-2 d-none d-sm-inline">Welcome:@TempData["username"]</span>
                         <a asp-action="Logout" asp-controller="Login">
 
-                            <button type="submit" class="btn border-info bg-white fw-2 text-info me-2 border border-2"
+                            <button type="submit" class="btn border-info white-bag fw-2 text-info me-2 border border-2"
                                     style="height:3rem">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="33" fill="currentColor" class="bi text-info bi-box-arrow-right d-inline d-sm-none" viewBox="0 0 16 16">
                                     <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0z" />
@@ -57,7 +57,7 @@
                             </button>
                         </a>
 
-                        <button class="dark-button border border-2 border-info bg-white my-3 mx-2" id="theme-toggle">
+                        <button class="dark-button border border-2 border-info white-bag my-3 mx-2" id="theme-toggle">
                             <svg xmlns="http://www.w3.org/2000/svg"
                                  width="35"
                                  height="39"
