--- a/HelloDoc/Views/AdminDash/Access/AccountAccess.cshtml
+++ b/HelloDoc/Views/AdminDash/Access/AccountAccess.cshtml
@@ -16,6 +16,7 @@
             <div>
                 <a asp-action="AdminDash" class="btn btn-outline-info mt-3"> ❮  Back </a>
             </div>
+
         </div>
         <div class="card border-0 shadow p-4 mb-5 rounded">
             <div class="d-flex justify-content-end ps-3">
@@ -24,7 +25,7 @@
 
             @* ---------------------------------- *@
 
-            <div class="bg-white border justify-content-center">
+            <div class="white-bag border justify-content-center">
                 <table class="table">
 
                     <thead class="table-secondary text-center">
