--- a/HelloDoc/Views/AdminDash/Access/_UserAccessPartial.cshtml
+++ b/HelloDoc/Views/AdminDash/Access/_UserAccessPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@model List<DAL.ViewModel.UserAccess>
-<div class="bg-white border justify-content-center">
+<div class="white-bag border justify-content-center">
     <table class="table">
 
         <thead class="table-secondary text-center">
