--- a/HelloDoc/Views/AdminDash/AdminProfile.cshtml
+++ b/HelloDoc/Views/AdminDash/AdminProfile.cshtml
@@ -23,7 +23,7 @@
         </a>
     </div>
     <div class="container p-sm-3    shadow rounded-3 white-bag">
-        <form class="form-floating" method="post" asp-action="AccountInformation" asp-controller="AdminDash">
+        <form class="form-floating" method="post" asp-action="AccountInformation" asp-controller="AdminDash" asp-route-id="@Model.adminId">
             <div class="row gx-4">
                 <h4 class="text-body">Account Information</h4>
                 <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
@@ -71,7 +71,7 @@
         </form>
     </div>
     <h4 class="text-body">Administrator Information</h4>
-    <form method="post" asp-action="AdministratorInformation" asp-controller="AdminDash">
+    <form method="post" asp-action="AdministratorInformation" asp-controller="AdminDash" asp-route-id="@Model.adminId">
         <div class="row gx-4">
             <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
                 <input type="text"
@@ -79,6 +79,7 @@
                        class="form-control shadow-none changable"
                        placeholder="FirstName" disabled />
                 <label for="floatingInput" class="ms-2">FirstName</label>
+                <span asp-validation-for="FirstName" class="mt-2 text-danger"></span>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
                 <input type="text"
@@ -86,14 +87,16 @@
                        class="form-control shadow-none changable"
                        placeholder="LastName" disabled />
                 <label for="floatingInput" class="ms-2">LastName</label>
+                <span asp-validation-for="LastName" class="mt-2 text-danger"></span>
 
             </div>
             <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
                 <input type="email"
                        asp-for="Email"
                        class="form-control shadow-none changable"
-                       placeholder="Email" disabled />
+                       placeholder="Email" disabled  required/>
                 <label for="floatingInput" class="ms-2">Email</label>
+             <span class="text-danger mt-2" id="chk"></span>
 
             </div>
             <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
@@ -155,7 +158,7 @@
     </form>
 </div>
 <h4 class="text-body">Mailing & Billing Information</h4>
-<form asp-action="MailingBillingInformation" method="post">
+<form asp-action="MailingBillingInformation" method="post" asp-route-id="@Model.adminId">
     <div class="row gx-4">
         <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
             <input type="text"
