--- a/HelloDoc/Views/AdminDash/Partners/AddBusiness.cshtml
+++ b/HelloDoc/Views/AdminDash/Partners/AddBusiness.cshtml
@@ -10,7 +10,7 @@
         <h4 class="mt-4">Add Business</h4>
             <a asp-action="Partners"> <button class="btn btn-outline-info mt-4" id="backButtonVendors"> ❮  Back </button></a>
     </div>
-    <div class="bg-white p-3">
+    <div class="white-bag p-3">
         <span class="fs-5 fw-bold w-100">Submit Information</span>
         <form id="businessForm" asp-action="AddBusiness" method="post" >
             <div class="row gx-4">
