--- a/HelloDoc/Views/Login/Patient_ResetPassword.cshtml
+++ b/HelloDoc/Views/Login/Patient_ResetPassword.cshtml
@@ -1,23 +1,10 @@
 ﻿@model DAL.ViewModel.Patient_ResetPassword
 @{
     ViewData["Title"] = "Patient_ResetPassword";
-    Layout = null;
+    Layout = "~/Views/Shared/_Layout3.cshtml";
 }
 
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Patient Reset Password Page</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="~/css/Patient_ResetPassword.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/HelloDoc.styles.css" asp-append-version="true" />
 
-  </head>
-  <body>
     <div class="container-fluid">
       <div class="row">
         <div class="col col-lg-6 col-sm-12 main-img opacity-50">
@@ -122,9 +109,5 @@
           <span>Privacy policy</span>
         </footer>
       </div>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-  </body>
-</html>
+    
 
