--- a/HelloDoc/Views/ProviderDashBoard/Scheduling/Scheduling.cshtml
+++ b/HelloDoc/Views/ProviderDashBoard/Scheduling/Scheduling.cshtml
@@ -19,7 +19,7 @@
 		</div>
 	</div>
 
-	<div class="container bg-white pt-3 px-4 position-relative rounded-2">
+	<div class="container white-bag pt-3 px-4 position-relative rounded-2">
 		<div id="calendarTitle" class="calendar-current-date fs-4 fw-bolder"></div>
 		<div class="m-0 pe-2 py-0 d-flex justify-content-end my-3">
 			<div class="m-0 p-0 text-danger">
