--- a/HelloDoc/Views/ME_ForSomeOne/SomeOne.cshtml
+++ b/HelloDoc/Views/ME_ForSomeOne/SomeOne.cshtml
@@ -25,7 +25,7 @@
             <!-- -----------------back button-------------------------- -->
             <div class="bg-body-secondary">
                 <div class="d-flex justify-content-end back">
-                    <a asp-action="SomeOne" asp-controller="ME_ForSomeOne" class="btn btn-outline-info text-center p-2 btn-p">
+                    <a  asp-action="Index" asp-controller="DashBoard"  class="btn btn-outline-info text-center p-2 btn-p">
                         <svg xmlns="http://www.w3.org/2000/svg"
                              width="16"
                              height="16"
