--- a/HelloDoc/Views/ProviderDashBoard/Scheduling/Scheduling.cshtml
+++ b/HelloDoc/Views/ProviderDashBoard/Scheduling/Scheduling.cshtml
@@ -15,7 +15,7 @@
 			<h3 class="mt-2"> My Schedule </h3>
 		</div>
 		<div>
-			<a asp-action="AdminDash" class="btn btn-outline-info mt-2" > ❮  Back </a>
+			<a asp-action="ProviderDashBoard" class="btn btn-outline-info mt-2" > ❮  Back </a>
 		</div>
 	</div>
 
