--- a/HelloDoc/Views/AdminDash/CreateRequest.cshtml
+++ b/HelloDoc/Views/AdminDash/CreateRequest.cshtml
@@ -128,13 +128,14 @@
                         <label for="floatingInput7" class="ms-2">City</label>
                     </div>
                     <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
-                        <select class="form-control d-flex align-items-center py-2" asp-for="State" name="SelectedStateId">
+                        <select class="form-control d-flex align-items-center py-2" asp-for="State" name="SelectedStateId" required>
                             <option>Select State</option>
                             @foreach (var state in Model.Region)
                             {
                                 <option value="@state.RegionId">@state.Name</option>
                             }
                         </select>
+                        <span asp-validation-for="State" class="mt-2 text-danger "></span>
                     </div>
                     <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
                         <input type="text"
@@ -176,6 +177,7 @@
                                   id="floatingTextarea2"
                                   style="height: 120px" required></textarea>
                         <label for="floatingTextarea2 control-label" class="ms-2 floating-label">Enter Brief Details of symptoms (Optional)</label>
+                        <span asp-validation-for="AdminNote" class="mt-2 text-danger"></span>
                     </div>
 
                     <div class="d-flex justify-content-end my-3">
