--- a/HelloDoc/Views/DashBoard/Patient_Dashboard.cshtml
+++ b/HelloDoc/Views/DashBoard/Patient_Dashboard.cshtml
@@ -2,15 +2,16 @@
 
 @{
     var Uniqueid = new HashSet<int?>();
+
 }
 
-<div class="tab-pane fade show active bg-body-secondary" style="height:85vh" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab" tabindex="0" >
+<div class="tab-pane fade show active bg-body-secondary" style="height:85vh" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab" tabindex="0">
 
     <div class="mx-auto pt-5" style="width:95%;">
-       <h3>Medical History</h3>
-       <div class="d-flex justify-content-end white-bag">
+        <h3>Medical History</h3>
+        <div class="d-flex justify-content-end white-bag">
             <button type="button" class="btn btn-outline-info mx-3 my-2" data-bs-toggle="modal" data-bs-target="#exampleModal">Create New Request</button>
-           
+
 
             <!-- Modal -->
             <div class="modal" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -33,51 +34,80 @@
                             </div>
 
                         </div>
-                       
+
                     </div>
                 </div>
             </div>
-       </div>
-
-        <table class="table text-center">
-            <thead >
-                <tr>
-                    <th scope="col">Created Date</th>
-                    <th scope="col">Current Status</th>
-                    <th scope="col">Documents</th>
-                </tr>
-            </thead>
-            <tbody class="white-bag"> 
-               @foreach (var item in Model)
-                {
-
-
-                    if (Uniqueid.Add(item.requestid) == true)
-                    {
-                        <tr>
-                            <td >@Html.DisplayFor(Modelitem => item.CreatedDate)</td>
-                            <td >@Html.DisplayFor(Modelitem => item.CurrentStatus)</td>
-                            <td> 
-                                @if (item.FilePath != null)
-                                {
-
-                                    @if (item.FilePath.Count() > 1)
-                                    {
-                                        <a asp-action="ViewDocs" asp-route-requestid="@item.requestid">  <button type="button" class="btn btn-outline-info mx-3"><span>(@item.count )</span>View Document</button> </a>
-                                    }
-                                }
-                                else
-                                {
-
-                                }
-
-                            </td>
-                        </tr>
-                    }
-                }
-            </tbody>
-        </table>
-
-   </div>
+        </div>
     
- 
+
+    <table class="table text-center">
+        <thead>
+            <tr>
+                <th scope="col">Created Date</th>
+                <th scope="col">Current Status</th>
+                <th scope="col">Documents</th>
+            </tr>
+        </thead>
+        <tbody class="white-bag">
+            @foreach (var item in Model)
+            {
+
+
+                if (Uniqueid.Add(item.requestid) == true)
+                {
+                    <tr>
+                        <td>@Html.DisplayFor(Modelitem => item.CreatedDate)</td>
+                        @switch (item.CurrentStatus)
+                        {
+                            case 1:
+                                <td>New</td>
+                                break;
+                            case 2:
+                                <td>Pending</td>
+                                break;
+                            case 3:
+                                <td>To Close</td>
+                                break;
+                            case 4:
+                                <td>Active</td>
+                                break;
+                            case 5:
+                                <td>Active</td>
+                                break;
+                            case 6:
+                                <td>Conclude</td>
+                                break;
+                            case 7:
+                                <td>To Close</td>
+                                break;
+                            case 8:
+                                <td>To Close</td>
+                                break;
+                            case 9:
+                                <td>UnPaid</td>
+                                break;
+                        }
+                        <td>
+                            @if (item.FilePath != null)
+                            {
+
+                                @if (item.FilePath.Count() > 1)
+                                {
+                                    <a asp-action="ViewDocs" asp-route-requestid="@item.requestid">  <button type="button" class="btn btn-outline-info mx-3"><span>(@item.count )</span>View Document</button> </a>
+                                }
+                            }
+                            else
+                            {
+
+                            }
+
+                        </td>
+                    </tr>
+                }
+            }
+        </tbody>
+    </table>
+
+</div>
+
