--- a/HelloDoc/Views/ME_ForSomeOne/Me.cshtml
+++ b/HelloDoc/Views/ME_ForSomeOne/Me.cshtml
@@ -24,7 +24,7 @@
             <!-- -----------------back button-------------------------- -->
             <div class="bg-body-secondary">
                 <div class="d-flex justify-content-end back">
-                    <a asp-action="Patient_submit_request" class="btn btn-outline-info text-center p-2 btn-p">
+                    <a asp-action="Index" asp-controller="DashBoard" class="btn btn-outline-info text-center p-2 btn-p">
                         <svg xmlns="http://www.w3.org/2000/svg"
                              width="16"
                              height="16"
