--- a/HelloDoc/Views/Shared/_ProviderDashBoard.cshtml
+++ b/HelloDoc/Views/Shared/_ProviderDashBoard.cshtml
@@ -27,10 +27,10 @@
 
 <body>
     <header>
-        <div class="container-fluid">
-            <div class="row border border-bottom shadow">
+        <div class="container-fluid px-0">
+            <div class="row border border-bottom ">
                 <!-- -----------------nav--------------- -->
-                <div class="col col-12 d-flex mb-1 flex-row justify-content-between">
+                <div class="col col-12 d-flex mb-1 flex-row px-3 justify-content-between" style="height:5.5rem">
 
                     <button class="btn btn-outline-info  d-sm-none d-inline" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions"
                             aria-controls="offcanvasWithBothOptions">
@@ -38,12 +38,13 @@
                             <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5" />
                         </svg>
                     </button>
-                    <div class="doct-logo d-none d-sm-inline">
+
+                    <div class="doct-logo d-none d-sm-inline my-auto">
                         <img src="~/images/doct-logo-2.png" alt="" style="height:4rem" />
                     </div>
 
-                    <div class=" float-end ">
-                        <span class="fw-bold me-2 d-none d-sm-inline">Welcome:@TempData["username"]</span>
+                    <div class=" float-end  my-auto">
+                        <span class="fw-bold me-2 d-none d-sm-inline">Welcome: @TempData["username"]</span>
                         <a asp-action="Logout" asp-controller="Login">
 
                             <button type="submit" class="btn border-info white-bag fw-2 text-info me-2 border border-2"
@@ -52,17 +53,17 @@
                                     <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0z" />
                                     <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708z" />
                                 </svg>
-                                <span class="d-none d-sm-inline">logout</span>
+                                <span class="d-none d-sm-inline">Logout</span>
 
                             </button>
                         </a>
 
-                        <button class="dark-button border border-2 border-info white-bag my-3 mx-2" id="theme-toggle">
+                        <button class="btn dark-button float-end border-2  border-info" id="theme-toggle" style="height:3rem">
                             <svg xmlns="http://www.w3.org/2000/svg"
-                                 width="35"
-                                 height="39"
+                                 width="29"
+                                 height="29"
                                  fill="currentColor"
-                                 class="bi bi-moon text-info p-1 m-auto type-bold"
+                                 class="bi bi-moon text-info  p-1"
                                  viewBox="0 0 16 16">
                                 <path d="M6 .278a.77.77 0 0 1 .08.858 7.2 7.2 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277q.792-.001 1.533-.16a.79.79 0 0 1 .81.316.73.73 0 0 1-.031.893A8.35 8.35 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.75.75 0 0 1 6 .278M4.858 1.311A7.27 7.27 0 0 0 1.025 7.71c0 4.02 3.279 7.276 7.319 7.276a7.32 7.32 0 0 0 5.205-2.162q-.506.063-1.029.063c-4.61 0-8.343-3.714-8.343-8.29 0-1.167.242-2.278.681-3.286" />
                             </svg>
@@ -70,10 +71,6 @@
                     </div>
                 </div>
                 <!-- -----------------nav--------------- -->
-
-                @* -------------------------------- *@
-
-                @* -------------------------------- *@
 
             </div>
             <!-- Nav tabs -->
@@ -84,7 +81,7 @@
                         <a asp-action="ProviderDashBoard" asp-controller="ProviderDashBoard" style="text-decoration:none">
                             <button class="nav-link  text-info
 
-                            @(new string[] { "ProviderDashBoard", "ViewCase", "ViewNotes","Accept","ViewUpload","SendOrder","EncounterForm" }
+                            @(new string[] { "ProviderDashBoard", "ViewCase", "ViewNotes","Accept","ViewUpload","SendOrder","EncounterForm","CreateRequest" }
                                 .Contains(ViewContext.ActionDescriptor.RouteValues["action"]) ? "active" : "")">
                                 Dashboard
                             </button>
@@ -123,7 +120,7 @@
                             <a asp-action="ProviderDashBoard" asp-controller="ProviderDashBoard" style="text-decoration:none">
                                 <button class="nav-link  text-info
 
-                            @(new string[] { "ProviderDashBoard", "ViewCase", "ViewNotes","Accept","ViewUpload","SendOrder","EncounterForm" }
+                            @(new string[] { "ProviderDashBoard", "ViewCase", "ViewNotes","Accept","ViewUpload","SendOrder","EncounterForm","CreateRequest" }
                                 .Contains(ViewContext.ActionDescriptor.RouteValues["action"]) ? "active" : "")">
                                     Dashboard
                                 </button>
