--- a/HelloDoc/Views/Login/Patient_login.cshtml
+++ b/HelloDoc/Views/Login/Patient_login.cshtml
@@ -93,9 +93,8 @@
    <script>
     const keys = Object.keys(localStorage);
 
-    // Iterate over all keys
-    for (const key of keys) {
-        // If the key is not "myKey", delete it
+    
+    for (const key of keys) 
         if (key !== "theme") {
             localStorage.removeItem(key);
         }
