--- a/HelloDoc/Views/AdminDash/Provider.cshtml
+++ b/HelloDoc/Views/AdminDash/Provider.cshtml
@@ -25,7 +25,7 @@
                         <input id="physicianid" name="id" hidden />
 
                         <div class="form-check">
-                            <input  type="radio" class="form-check-input border" name="radioForprovider" value="1" id="radio1">Email
+                            <input type="radio" class="form-check-input border" name="radioForprovider" value="1" id="radio1">Email
                             <label class="form-check-label" for="radio1"></label>
                         </div>
                         <div class="form-check">
@@ -55,82 +55,93 @@
 
 
 @* --------------------- *@
-<div class="container-fluid  bg-body-secondary">
 
-    <div class="container " style="height:80vh !important">
-    <div class="justify-content-between d-flex  container-fluid mb-2 position-relative ">
-        <div class="mt-3">
-            <h3> Provider Information </h3>
-        </div>
-        <div>
-            <a asp-action="AdminDash" class="btn btn-outline-info mt-3"> ❮  Back </a>
-        </div>
-    </div>
-    <div class="card border-0 shadow p-4 mb-5 rounded">
-        <div class="row justify-content-between ps-3">
 
-            <div class="d-flex  border border-secondary  rounded align-items-center mx-sm-2 ps-2 my-2 col-3">
-                <select class="form-control border-0 shadow-none " id="regiondropdown">
-                    <option value=" ">All Region</option>
-                    @foreach (var state in Model.regions)
-                    {
-                        <option value="@state.RegionId">@state.Name</option>
-                    }
-                </select>
-                
+<div class="container-fluid  bg-body-secondary" style="min-height: 75vh !important">
+
+    <div class="container " style="height:auto !important">
+        <div class="justify-content-between d-flex  container-fluid mb-2 position-relative ">
+            <div class="mt-3">
+                <h3> Provider Information </h3>
             </div>
-            <div class="d-flex col-3 mr-0 py-2 justify-content-end">
-                    <a asp-action="CreateProviderAccount" class="btn btn-outline-info mx-2" style="width:fit-content">
-                    <span>Create Provider Account</span>
+            <div>
+                <a asp-action="AdminDash" class="btn btn-outline-info mt-3"> ❮  Back </a>
+            </div>
+        </div>
+        <div class="card border-0 shadow p-4  rounded">
+            <div class=" d-flex justify-content-between ">
+
+                <div class="d-flex p border border-secondary  rounded align-items-center ">
+                    <select class="form-control border-0 shadow-none " id="regiondropdown">
+                        <option value=" ">All Region</option>
+                        @foreach (var state in Model.regions)
+                        {
+                            <option value="@state.RegionId">@state.Name</option>
+                        }
+                    </select>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" class="me-2" height="16" fill="currentColor" class="bi bi-chevron-down" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708" />
+                    </svg>
+                </div>
+                <div class="d-flex justify-content-end">
+                    <a asp-action="CreateProviderAccount" class="btn btn-outline-info text-info">
+                        Create Provider Account
+                    </a>
+                </div>
+                @* <div class="d-flex col-3  justify-content-end">
+                <a asp-action="CreateProviderAccount" class="btn btn-outline-info  " >
+                Create Provider Account
                 </a>
+                </div> *@
+
+            </div>
+
+            <div class="my-3 table-responsive " style="height:auto !important" id="ProviderPartial">
             </div>
 
         </div>
-
-        <div class="my-3 table-responsive" id="ProviderPartial">
-        </div>
-
     </div>
 </div>
-</div>  
+
+
 <script src="~/js/AdminProvider.js"></script>
 @* --------------------- *@
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script>
-     $(document).ready(function () { 
+    $(document).ready(function () {
 
-         console.log("sabnjsabx")
-     GetProviders();                          
- })
+        console.log("sabnjsabx")
+        GetProviders();
+    })
     $("#regiondropdown").on("change", function () {
         console.log("1234")
         GetProviders();
- });
+    });
 
     function GetProviders() {
-     var region = $("#regiondropdown").val();
-     console.log(region)
-     $.ajax({
-         method: "GET",
-         url: "/AdminDash/ProvidersData",
-         data: { region: region },
-         success: function (response) {
-             if (response.code == 401) {
+        var region = $("#regiondropdown").val();
+        console.log(region)
+        $.ajax({
+            method: "GET",
+            url: "/AdminDash/ProvidersData",
+            data: { region: region },
+            success: function (response) {
+                if (response.code == 401) {
 
-                 location.reload();
-             }
-             else {
-                 console.log("SuccessFully Executed")
+                    location.reload();
+                }
+                else {
+                    console.log("SuccessFully Executed")
                     $('#ProviderPartial').html(response)
-                
-             }
 
-         },
-         error: function () {
-             console.log("Error")
-         }
-     })
- }
+                }
+
+            },
+            error: function () {
+                console.log("Error")
+            }
+        })
+    }
 </script>
