--- a/HelloDoc/Views/AdminDash/_ProviderTable.cshtml
+++ b/HelloDoc/Views/AdminDash/_ProviderTable.cshtml
@@ -1,4 +1,8 @@
-﻿﻿﻿<div class="table table-responsive mt-4 mb-4">
+﻿@{
+    int i = 0;
+}﻿﻿
+
+<div class="table table-responsive mt-4 mb-4">
     <table class="table table-hover  d-md-table d-none">
         <thead class="table-light text-center">
             <tr>
@@ -48,6 +52,59 @@
             }
         </tbody>
     </table>
+</div>
+
+
+<div class="accordion mx-2 pb-3" id="accordionExample">
+
+   
+    
+        @foreach (var item in Model)
+        {
+
+
+            <div class="accordion-item bg-info-subtle">
+                <button class=" accordion-header btn w-100 px-2 shadow-none" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_@i" aria-expanded="false" aria-controls="collapseTwo">
+                    <div class="py-3 ps-3 d-flex align-items-center">
+                    <input id="NotifyBox_@item.physicianid" type="checkbox" onchange="locationchange(@item.physicianid)" class="form-check-input" name="fileIds" @(item.OnCallStaus[0] ? "checked" : "")>
+                    <span class="fs-4 mx-3">@item.Name</span>
+                    </div>
+                    <div class="ps-1 py-3 d-flex justify-content-start">
+                        <span class="text-body">On Call Status: Un Available</span>
+                    </div>
+                </button>
+                <div id="collapse_@i" class="accordion-collapse collapse border-top border-secondary" data-bs-parent="#accordionExample">
+                    <div class="accordion-body position-relative p-3">
+                    <h6 class="fw-bold text-body">Role : @item.Role</h6>
+                        <span class="fw-bold text-body">
+                        @if (item.status == 1)
+                        {
+                            <span class="badge bg-success">Active</span>
+                        }
+                        else if (item.status == 2)
+                        {
+                            <span class="badge bg-warning text-dark">Pending</span>
+                        }
+                        else if (item.status == 3)
+                        {
+                            <span class="badge bg-secondary">Conclude</span>
+                        }
+                        else
+                        {
+                            <span class="badge bg-danger">Unknown</span>
+                        }
+                        </span>
+                        <div class="d-flex justify-content-end align-items-center">
+                        <button class="btn btn-outline-info rounded me-2" onclick="togglemodal(this)" data-physicianid="@item.physicianid">Contact</button>
+                        <a asp-action="PhysicianProfile" asp-route-id="@item.physicianid" class="btn btn-outline-info shadow-none ">Edit</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            i++;
+        }
+    
+
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
