--- a/HelloDoc/Views/Shared/_Layout-1.cshtml
+++ b/HelloDoc/Views/Shared/_Layout-1.cshtml
@@ -5,6 +5,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - HelloDoc</title>
+    <link rel="shortcut icon" type="image/x-icon" href="~/images/doctorlogo.png" />
+
     <link rel="stylesheet" href="~/HelloDoc.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" asp-append-version="true" />
