--- a/HelloDoc/Views/Shared/_Layout3.cshtml
+++ b/HelloDoc/Views/Shared/_Layout3.cshtml
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Patient Login Page</title>
+    <link rel="shortcut icon" type="image/x-icon" href="~/images/doctorlogo.png" />
+
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/HelloDoc.styles.css" asp-append-version="true" />
