--- a/HelloDoc/Views/AdminDash/CreateShiftPartial.cshtml
+++ b/HelloDoc/Views/AdminDash/CreateShiftPartial.cshtml
@@ -29,17 +29,17 @@
                 </div>
 
                 <div class="col-md-12 form-floating mb-3">
-                    <input id="StartDate" asp-for="Startdate" class="form-control rounded vcs" name="Startdate" type="date" placeholder=Suchtext autocomplete=off>
+                    <input id="StartDate" asp-for="Startdate" class="form-control rounded vcs" name="Startdate" type="date" placeholder=Suchtext autocomplete="off">
                     <label for="floatingInput">Starting Date</label>
                     <span asp-validation-for="Startdate" class="mt-2 text-danger"></span>
                 </div>
                 <div class="col-md-6 form-floating mb-3">
-                    <input id="StartTime" asp-for="Starttime" class="form-control rounded vcs" name="Starttime" type="time" placeholder=Suchtext autocomplete=off>
+                    <input id="StartTime" asp-for="Starttime" class="form-control rounded vcs" name="Starttime" type="time" placeholder=Suchtext autocomplete="off">
                     <label for="floatingInput">Start</label>
                     <span asp-validation-for="Starttime" class="mt-2 text-danger"></span>
                 </div>
                 <div class="col-md-6 form-floating mb-3">
-                    <input id="EndTime" asp-for="Endtime" class="form-control rounded vcs" name="Endtime" type="time" placeholder=Suchtext autocomplete=off>
+                    <input id="EndTime" asp-for="Endtime" class="form-control rounded vcs" name="Endtime" type="time" placeholder=Suchtext autocomplete="off">
                     <label for="floatingInput">End</label>
                     <span asp-validation-for="Endtime" class="mt-2 text-danger"></span>
                 </div>
